fix(theme): wrap a tag when necessary

--- a/packages/shared/styles/normalize.scss
+++ b/packages/shared/styles/normalize.scss
@@ -21,6 +21,7 @@ a {
   font-weight: 500;
   color: #3eaf7c;
   text-decoration: none;
+  overflow-wrap: break-word;
 }
 
 p a code {
